--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('images/SepiaPoppyClose-Up1-2.jpeg');
   background-repeat: no-repeat, no-repeat;
   background-size: cover, cover;
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -49,10 +50,6 @@
 }
 
 @media (max-width: 1199px) {
-   .u-section-1 {
-    background-position: 50% 50%;
-  }
-
   .u-section-1 .u-sheet-1 {
     min-height: 708px;
   }
@@ -84,6 +81,10 @@
 }
 
 @media (max-width: 991px) {
+   .u-section-1 {
+    background-position: 50% 50%;
+  }
+
   .u-section-1 .u-sheet-1 {
     min-height: 542px;
   }
@@ -798,39 +799,79 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 528px;
+  }
+
+  .u-section-4 .u-list-1 {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
   .u-section-4 .u-repeater-1 {
-    grid-auto-columns: calc(100% - 0px);
+    grid-auto-columns: calc(100% + 0px);
     grid-template-columns: 100%;
+    min-height: 528px;
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-top: 25px;
+    padding-bottom: 22px;
   }
 
   .u-section-4 .u-image-1 {
-    height: 119px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 70px;
+    width: 136px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-4 .u-container-layout-2 {
+    padding-top: 25px;
+    padding-bottom: 22px;
   }
 
   .u-section-4 .u-image-2 {
-    height: 119px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 70px;
+    width: 136px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-4 .u-container-layout-3 {
+    padding-top: 25px;
+    padding-bottom: 22px;
   }
 
   .u-section-4 .u-image-3 {
-    height: 119px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 70px;
+    width: 136px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-4 .u-container-layout-4 {
+    padding-top: 25px;
+    padding-bottom: 22px;
   }
 
   .u-section-4 .u-image-4 {
-    height: 119px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 70px;
+    width: 136px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-4 .u-container-layout-5 {
+    padding-top: 25px;
+    padding-bottom: 22px;
   }
 
   .u-section-4 .u-image-5 {
-    height: 119px;
-    margin-right: initial;
-    margin-left: initial;
+    height: 70px;
+    width: 136px;
+    margin-left: auto;
+    margin-right: auto;
   }
 } .u-section-5 {
   background-image: none;
