--- a/index.css
+++ b/index.css
@@ -157,7 +157,7 @@
 
   .u-section-1 .u-text-3 {
     font-size: 1.3125rem;
-    margin-top: -122px;
+    margin-top: -114px;
     margin-right: 180px;
     margin-left: 0;
   }
@@ -226,8 +226,8 @@
     font-size: 1.5rem;
     width: 340px;
     --animation-custom_in-translate_x: 0px;
-    margin-top: 36px;
-    margin-bottom: 29px;
+    margin-top: 33px;
+    margin-bottom: 33px;
   }
 
   .u-section-2 .u-line-1 {
@@ -1715,37 +1715,31 @@
   }
 
   .u-section-4 .u-image-1 {
-    height: 100px;
     width: 245px;
   }
 
   .u-section-4 .u-image-2 {
-    height: 100px;
     width: 245px;
   }
 
   .u-section-4 .u-image-3 {
-    height: 100px;
     width: 245px;
+    object-position: 50% 50%;
   }
 
   .u-section-4 .u-image-4 {
-    height: 100px;
     width: 245px;
   }
 
   .u-section-4 .u-image-5 {
-    height: 100px;
     width: 245px;
   }
 
   .u-section-4 .u-image-6 {
-    height: 100px;
     width: 245px;
   }
 
   .u-section-4 .u-image-7 {
-    height: 100px;
     width: 245px;
   }
 } .u-section-5 {
@@ -1773,7 +1767,7 @@
 }
 
 .u-section-5 .u-image-1 {
-  min-height: 168px;
+  min-height: 200px;
   background-position: 50% 77.98%, 50% 50%;
   background-repeat: no-repeat, no-repeat;
   background-image: url("images/FuturisticUrbanScene.jpeg"), linear-gradient(rgb(139, 9, 7), rgb(249, 66, 1));
@@ -1786,7 +1780,7 @@
 }
 
 .u-section-5 .u-layout-cell-2 {
-  min-height: 168px;
+  min-height: 200px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-image: linear-gradient(rgb(29, 29, 29), rgb(29, 29, 29));
@@ -1807,7 +1801,7 @@
 }
 
 .u-section-5 .u-image-2 {
-  min-height: 168px;
+  min-height: 200px;
   background-position: 46.64% 47.73%;
   background-image: url("images/KoreanScenicGate.png");
   background-size: 170%;
@@ -1934,11 +1928,11 @@
   }
 
   .u-section-5 .u-image-1 {
-    min-height: 139px;
+    min-height: 165px;
   }
 
   .u-section-5 .u-layout-cell-2 {
-    min-height: 139px;
+    min-height: 165px;
     --color-var: #1d1d1d;
   }
 
@@ -1948,7 +1942,7 @@
   }
 
   .u-section-5 .u-image-2 {
-    min-height: 139px;
+    min-height: 165px;
   }
 
   .u-section-5 .u-layout-cell-4 {
@@ -1998,7 +1992,7 @@
   }
 
   .u-section-5 .u-image-1 {
-    min-height: 106px;
+    min-height: 126px;
   }
 
   .u-section-5 .u-container-layout-1 {
@@ -2016,7 +2010,7 @@
   }
 
   .u-section-5 .u-image-2 {
-    min-height: 106px;
+    min-height: 126px;
   }
 
   .u-section-5 .u-container-layout-3 {
@@ -2079,7 +2073,7 @@
   }
 
   .u-section-5 .u-image-1 {
-    min-height: 239px;
+    min-height: 284px;
   }
 
   .u-section-5 .u-container-layout-1 {
@@ -2093,7 +2087,7 @@
   }
 
   .u-section-5 .u-image-2 {
-    min-height: 239px;
+    min-height: 284px;
   }
 
   .u-section-5 .u-container-layout-3 {
@@ -2163,7 +2157,7 @@
 
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 1576px;
+    min-height: 1662px;
   }
 
   .u-section-5 .u-text-1 {
@@ -2174,10 +2168,15 @@
 
   .u-section-5 .u-layout-wrap-1 {
     margin-top: 26px;
+    margin-bottom: 42px;
   }
 
   .u-section-5 .u-image-1 {
-    min-height: 150px;
+    min-height: 201px;
+  }
+
+  .u-section-5 .u-layout-cell-2 {
+    min-height: 203px;
   }
 
   .u-section-5 .u-text-2 {
@@ -2187,11 +2186,11 @@
   }
 
   .u-section-5 .u-image-2 {
-    min-height: 150px;
+    min-height: 199px;
   }
 
   .u-section-5 .u-layout-cell-4 {
-    min-height: 160px;
+    min-height: 201px;
   }
 
   .u-section-5 .u-text-3 {
@@ -2202,28 +2201,29 @@
   }
 
   .u-section-5 .u-image-3 {
-    min-height: 176px;
+    min-height: 200px;
   }
 
   .u-section-5 .u-layout-cell-6 {
-    min-height: 143px;
+    min-height: 198px;
   }
 
   .u-section-5 .u-text-4 {
     width: auto;
+    margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-5 .u-image-4 {
-    min-height: 176px;
+    min-height: 200px;
   }
 
   .u-section-5 .u-layout-cell-8 {
-    min-height: 164px;
+    min-height: 199px;
   }
 
   .u-section-5 .u-layout-cell-9 {
-    min-height: 148px;
+    min-height: 201px;
   }
 }
 
