--- a/nicepage.css
+++ b/nicepage.css
@@ -47129,14 +47129,14 @@ a.u-link.u-text-hover-color-var:hover {
   }
 
   .u-header .u-image-1 {
-    width: 208px;
-    height: 110px;
-    margin-top: 19px;
-    margin-left: -1px;
+    width: 236px;
+    height: 125px;
+    margin-top: 12px;
+    margin-left: -37px;
   }
 
   .u-header .u-menu-1 {
-    margin-top: -71px;
+    margin-top: -78px;
     margin-bottom: 39px;
   }
 }
@@ -47159,11 +47159,6 @@ a.u-link.u-text-hover-color-var:hover {
   text-transform: uppercase;
   letter-spacing: 0px;
   font-size: 0.875rem;
-  --animation-custom_in-translate_x: 0px;
-  --animation-custom_in-translate_y: 0px;
-  --animation-custom_in-opacity: 0;
-  --animation-custom_in-rotate: 0deg;
-  --animation-custom_in-scale: 1;
   --radius: 20px;
   background-image: none;
   font-weight: 700;
@@ -47193,6 +47188,11 @@ a.u-link.u-text-hover-color-var:hover {
 }
 @media (max-width: 1199px) {
   .u-footer .u-btn-1 {
+    --animation-custom_in-translate_x: 0px;
+    --animation-custom_in-translate_y: 0px;
+    --animation-custom_in-opacity: 0;
+    --animation-custom_in-rotate: 0deg;
+    --animation-custom_in-scale: 1;
     margin-top: -107px;
     margin-right: 0;
   }
@@ -47283,29 +47283,32 @@ a.u-link.u-text-hover-color-var:hover {
   }
 
   .u-footer .u-image-1 {
+    height: 105px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
   .u-footer .u-btn-1 {
-    margin-top: 143px;
-    padding: 9px 1px 11px 0;
+    margin-top: 125px;
+    padding-right: 9px;
+    padding-bottom: 10px;
+    padding-left: 9px;
   }
 
   .u-footer .u-text-1 {
-    margin-top: -186px;
+    margin-top: -174px;
     margin-left: 0;
   }
 
   .u-footer .u-text-2 {
-    margin-top: 20px;
+    margin-top: 17px;
     margin-right: 221px;
     margin-left: 0;
   }
 
   .u-footer .u-text-3 {
-    margin-top: 19px;
+    margin-top: 10px;
     margin-bottom: 60px;
   }
 }
