--- a/nicepage.css
+++ b/nicepage.css
@@ -47043,14 +47043,19 @@ a.u-link.u-text-hover-color-var:hover {
 }
 
 .u-header .u-nav-1 {
-  font-size: 1rem;
-  font-family: Inter;
-  letter-spacing: normal;
   font-weight: 700;
+  font-family: Inter;
 }
 
 .u-header .u-nav-2 {
   font-size: 1.25rem;
+  margin-bottom: 0;
+}
+
+.u-header .u-image-2 {
+  width: 190px;
+  height: 98px;
+  margin: 12px auto 0;
 }
 
 .u-header .u-btn-1 {
@@ -47068,10 +47073,6 @@ a.u-link.u-text-hover-color-var:hover {
   margin: -40px 77px 48px auto;
 }
 @media (max-width: 1199px) {
-  .u-header .u-sheet-1 {
-    min-height: 180px;
-  }
-
   .u-header .u-image-1 {
     width: 272px;
     height: 143px;
@@ -47082,6 +47083,10 @@ a.u-link.u-text-hover-color-var:hover {
     width: auto;
     margin-top: -87px;
     margin-right: 212px;
+  }
+
+  .u-header .u-nav-1 {
+    font-size: 1rem;
   }
 
   .u-header .u-btn-1 {
@@ -47108,10 +47113,6 @@ a.u-link.u-text-hover-color-var:hover {
   }
 }
 @media (max-width: 767px) {
-  .u-header .u-sheet-1 {
-    min-height: 202px;
-  }
-
   .u-header .u-image-1 {
     height: 143px;
     margin-top: 38px;
@@ -47124,10 +47125,6 @@ a.u-link.u-text-hover-color-var:hover {
   }
 }
 @media (max-width: 575px) {
-  .u-header .u-sheet-1 {
-    min-height: 129px;
-  }
-
   .u-header .u-image-1 {
     width: 236px;
     height: 125px;
@@ -47138,6 +47135,16 @@ a.u-link.u-text-hover-color-var:hover {
   .u-header .u-menu-1 {
     margin-top: -78px;
     margin-bottom: 39px;
+  }
+
+  .u-header .u-nav-2 {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-header .u-image-2 {
+    margin-top: -8px;
   }
 }
  .u-footer {
