--- a/index.css
+++ b/index.css
@@ -1360,7 +1360,7 @@
 
   .u-section-3 .u-text-3 {
     margin-top: -162px;
-    margin-right: 86px;
+    margin-right: 53px;
     margin-left: 9px;
   }
 
@@ -1382,7 +1382,7 @@
   }
 
   .u-section-3 .u-text-16 {
-    margin-right: 53px;
+    margin-right: 0;
   }
 
   .u-section-3 .u-text-17 {
@@ -1410,8 +1410,8 @@
 
   .u-section-3 .u-text-30 {
     margin-top: 13px;
-    margin-right: 29px;
     margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-3 .u-text-31 {
@@ -1890,6 +1890,7 @@
 .u-section-5 .u-text-7 {
   font-weight: 400;
   font-family: Inter;
+  font-size: 1.125rem;
   margin: 0 auto 0 0;
 }
 
@@ -1928,6 +1929,7 @@
   font-family: Inter;
   width: 226px;
   transition-duration: 0.5s;
+  font-size: 1.125rem;
   margin: 0 auto;
 }
 
@@ -2000,20 +2002,12 @@
     min-height: 162px;
   }
 
-  .u-section-5 .u-text-7 {
-    font-size: 1.125rem;
-  }
-
   .u-section-5 .u-layout-cell-7 {
     min-height: 162px;
   }
 
   .u-section-5 .u-layout-cell-8 {
     min-height: 162px;
-  }
-
-  .u-section-5 .u-text-9 {
-    font-size: 1.125rem;
   }
 
   .u-section-5 .u-layout-cell-9 {
@@ -2239,6 +2233,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-5 .u-text-1 {
+    font-size: 1.875rem;
+  }
+
   .u-section-5 .u-layout-wrap-1 {
     width: 100%;
     margin-left: 0;
