--- a/index.css
+++ b/index.css
@@ -12,10 +12,9 @@
 .u-section-1 .u-line-1 {
   position: absolute;
   top: 0;
-  left: auto;
-  height: 351px;
+  left: 820px;
+  height: 285px;
   transform-origin: center top;
-  right: 270px;
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
@@ -31,7 +30,7 @@
   line-height: 1.2;
   font-weight: 700;
   font-family: ContextRepriseExpandedSSiExpanded;
-  margin: 228px 358px 0 194px;
+  margin: 217px 405px 0 147px;
 }
 
 .u-section-1 .u-text-2 {
@@ -39,8 +38,9 @@
   --animation-custom_in-translate_x: 300px;
   --animation-custom_in-translate_y: 0px;
   text-transform: uppercase;
-  font-size: 1.125rem;
-  margin: -44px 61px 60px auto;
+  font-size: 0.875rem;
+  letter-spacing: 4px;
+  margin: -131px 76px 60px auto;
 }
 
 @media (max-width: 1199px) {
@@ -53,22 +53,21 @@
   }
 
   .u-section-1 .u-line-1 {
-    right: 210px;
+    left: 729px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 3.5rem;
     width: auto;
-    margin-top: 210px;
-    margin-right: 329px;
-    margin-left: 90px;
+    margin-top: 207px;
+    margin-right: 351px;
+    margin-left: 68px;
   }
 
   .u-section-1 .u-text-2 {
-    font-size: 1rem;
     width: auto;
-    margin-top: -29px;
-    margin-right: 25px;
+    margin-top: -98px;
+    margin-right: -11px;
   }
 }
 
@@ -78,6 +77,12 @@
     background-size: 120%, 120%;
   }
 
+  .u-section-1 .u-line-1 {
+    top: -8px;
+    left: auto;
+    right: 206px;
+  }
+
   .u-section-1 .u-text-1 {
     margin-top: 201px;
     margin-right: 246px;
@@ -85,7 +90,8 @@
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 27px;
+    margin-top: -111px;
+    margin-right: -37px;
   }
 }
 
@@ -104,14 +110,14 @@
 
   .u-section-1 .u-text-1 {
     font-size: 2.25rem;
-    margin-top: 188px;
-    margin-right: 205px;
-    margin-left: -10px;
+    margin-top: 185px;
+    margin-right: 222px;
+    margin-left: -27px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 47px;
-    margin-right: 0;
+    margin-top: -14px;
+    margin-right: -50px;
   }
 }
 
@@ -128,21 +134,20 @@
   .u-section-1 .u-line-1 {
     left: 195px;
     height: 200px;
-    right: 270px;
+    right: 319px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 1.25rem;
-    margin-top: 194px;
-    margin-right: 170px;
-    margin-left: -25px;
+    margin-right: 195px;
+    margin-left: -50px;
   }
 
   .u-section-1 .u-text-2 {
-    font-size: 0.875rem;
-    margin-top: 20px;
-    margin-right: -33px;
-    margin-left: 195px;
+    font-size: 0.75rem;
+    margin-top: -39px;
+    margin-right: -79px;
+    margin-left: 188px;
   }
 } .u-section-2 {
   background-position: 50% 50%;
@@ -154,7 +159,7 @@
 
 .u-section-2 .u-text-1 {
   font-size: 1.75rem;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   --animation-custom_in-translate_x: -300px;
   --animation-custom_in-translate_y: 0px;
   --animation-custom_in-opacity: 0;
@@ -1916,7 +1921,7 @@
   min-height: 197px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-image: linear-gradient(to right, rgb(139, 9, 7), rgb(249, 66, 1));
+  background-image: linear-gradient(rgb(139, 9, 7), rgb(249, 66, 1));
   background-size: cover;
 }
 
@@ -2503,6 +2508,10 @@
   margin: 0;
 }
 
+.u-section-6 .u-icon-2 {
+  padding: 0;
+}
+
 .u-section-6 .u-text-6 {
   font-size: 0.875rem;
   text-transform: uppercase;
@@ -2530,6 +2539,10 @@
   margin: 0;
 }
 
+.u-section-6 .u-icon-3 {
+  padding: 0;
+}
+
 .u-section-6 .u-text-8 {
   font-size: 0.875rem;
   text-transform: uppercase;
@@ -2555,6 +2568,10 @@
   font-size: 1.5rem;
   font-weight: 400;
   margin: 0;
+}
+
+.u-section-6 .u-icon-4 {
+  padding: 0;
 }
 
 .u-section-6 .u-text-10 {
@@ -2740,6 +2757,17 @@
   margin: 21px 0 0;
 }
 
+.u-section-7 .u-icon-2 {
+  width: 23px;
+  height: 23px;
+  --text-color-var: #958e87;
+  transform-origin: center center;
+  transform: scaleX(-1) scaleY(-1);
+  color: rgb(149, 142, 135) !important;
+  margin: -49px 21px 0 auto;
+  padding: 0;
+}
+
 .u-section-7 .u-list-item-2 {
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
@@ -2752,7 +2780,7 @@
   padding: 30px 30px 0;
 }
 
-.u-section-7 .u-icon-2 {
+.u-section-7 .u-icon-3 {
   width: 23px;
   height: 23px;
   --text-color-var: #958e87;
@@ -2770,6 +2798,17 @@
   margin: 21px 0 0;
 }
 
+.u-section-7 .u-icon-4 {
+  width: 23px;
+  height: 23px;
+  --text-color-var: #958e87;
+  transform-origin: center center;
+  transform: scaleX(-1) scaleY(-1);
+  color: rgb(149, 142, 135) !important;
+  margin: -49px 21px 0 auto;
+  padding: 0;
+}
+
 .u-section-7 .u-list-item-3 {
   --animation-custom_in-translate_x: 0px;
   --animation-custom_in-translate_y: 0px;
@@ -2782,7 +2821,7 @@
   padding: 30px 30px 0;
 }
 
-.u-section-7 .u-icon-3 {
+.u-section-7 .u-icon-5 {
   width: 23px;
   height: 23px;
   --text-color-var: #958e87;
@@ -2798,6 +2837,17 @@
 
 .u-section-7 .u-text-7 {
   margin: 21px 0 0;
+}
+
+.u-section-7 .u-icon-6 {
+  width: 23px;
+  height: 23px;
+  --text-color-var: #958e87;
+  transform-origin: center center;
+  transform: scaleX(-1) scaleY(-1);
+  color: rgb(149, 142, 135) !important;
+  margin: -49px 21px 0 auto;
+  padding: 0;
 }
 
 .u-section-7 .u-text-8 {
@@ -2828,10 +2878,6 @@
 }
 
 @media (max-width: 1199px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 754px;
-  }
-
   .u-section-7 .u-repeater-1 {
     min-height: 344px;
   }
@@ -2888,10 +2934,6 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-7 .u-sheet-1 {
-    min-height: 1197px;
-  }
-
   .u-section-7 .u-text-1 {
     font-size: 1.5rem;
     width: auto;
